# src/app/api/services.ts
@@ -1,7 +1,7 @@
 export { CaseControllerService } from './services/case-controller.service';
+export { ScanControllerService } from './services/scan-controller.service';
 export { MessagesControllerService } from './services/messages-controller.service';
 export { PatientHistoryControllerService } from './services/patient-history-controller.service';
 export { PatientControllerControllerService } from './services/patient-controller-controller.service';
-export { ScanControllerService } from './services/scan-controller.service';
 export { UserControllerService } from './services/user-controller.service';
 export { TodoControllerService } from './services/todo-controller.service';
